# llm-final-task

./: .tool-versions  AutoModel_llm_jp_inference_vllm_simple_prompt.ipynb  README.md  Supervised_FineTuning.ipynb  bert_classification.ipynb  custom-example-selector.py  custom-few-shot-prompt-template.py  data_import.py  elyza-tasks-100-TV_0.jsonl  elyza_tasks_100_labels.csv  gemma2_it_classification_tasks.ipynb  inference_vllm.ipynb  inference_vllm_example_selecter_prompt+prompt_engineering.ipynb  inference_vllm_example_selecter_prompt.ipynb  inference_vllm_simple_prompt.ipynb  llm_jp_3_13b_task_solve.ipynb  llm_model.py  prompt.py  pyproject.toml  task_classification.py  two_stage_think.py
